--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -50,7 +50,7 @@
 
 		{# NOTE: Webpack Styles Bundles Auto Created By HtmlWebpackPlugin and placed here #}
 
-	<link href="/build/css/main.7fd675498525a334c068d5629c2d9207.bundle.min.css" rel="stylesheet"></head>
+	</head>
 	<body>
 
 		<div id="app">
@@ -76,5 +76,5 @@
 
 		{# NOTE: Webpack Script Bundles Auto Created By HtmlWebpackPlugin and placed here #}
 
-	<script type="text/javascript" src="/build/js/main.0d7af543238d8fa4f179.bundle.min.js"></script></body>
+	<script type="text/javascript" src="/build/js/main.bundle.js"></script></body>
 </html>
