--- a/templates/registration/_login.twig
+++ b/templates/registration/_login.twig
@@ -1,28 +1,54 @@
 {% extends "_layout" %}
 
 {% block main %}
-<form method="post" accept-charset="UTF-8">
-    {{ csrfInput() }}
-    {{ actionInput('users/login') }}
 
-    <h3><label for="loginName">Username or email</label></h3>
-    <input id="loginName" type="text" name="loginName"
-        value="{{ craft.app.user.rememberedUsername }}">
+	<section class="form">
+			<div class="container">
+				<div class="center">
 
-    <h3><label for="password">Password</label></h3>
-    <input id="password" type="password" name="password">
+					<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Login</h1>
+					<form method="post" accept-charset="UTF-8">
+                        {{ csrfInput() }}
+                        {{ actionInput('users/login') }}
 
-    <label>
-        <input type="checkbox" name="rememberMe" value="1">
-        Remember me
-    </label>
+                        {% if getCookie('lastVisitedSchedule') %}
+                            {% set lastVisitedSchedule = getCookie('lastVisitedSchedule') %}
+                            {{ redirectInput( 'app/' ~ lastVisitedSchedule ) }}
+                        {% endif %}
 
-    <input type="submit" value="Login">
+                        <div class="form-group">
+                        {# <h3>
+                            <label for="loginName">Username or email</label>
+                        </h3> #}
+                        <input placeholder="Username or email" id="loginName" type="text" name="loginName" value="{{ craft.app.user.rememberedUsername }}">
+                        </div>
 
-    {% if errorMessage is defined %}
-        <p>{{ errorMessage }}</p>
-    {% endif %}
-</form>
+                        <div class="form-group">
+                        {# <h3>
+                            <label for="password">Password</label>
+                        </h3> #}
+                        <input placeholder="Password" id="password" type="password" name="password">
+                        </div>
 
-<p><a href="{{ url('forgotpassword') }}">Forget your password?</a></p>
+                        <div class="form-group">
+                        <label>
+                            <input type="checkbox" name="rememberMe" value="1">
+                            Remember me
+                        </label>
+                        </div>
+
+                        <button type="submit">Login</button>
+
+                        {% if errorMessage is defined %}
+                            <p>{{ errorMessage }}</p>
+                        {% endif %}
+                    </form>
+
+                    <p class="helper">
+                        <a href="{{ url('forgotpassword') }}">Forgot your password?</a>
+                    </p>
+				</div>
+			</div>
+	</section>
+
 {% endblock %}
