--- a/templates/registration/_signup.twig
+++ b/templates/registration/_signup.twig
@@ -2,46 +2,58 @@
 
 {% block main %}
 
-<h1>Sign Up</h1>
+	<section class="form">
+			<div class="container">
+				<div class="center">
 
-<form method="post" accept-charset="UTF-8">
-    {{ csrfInput() }}
-    {{ actionInput('users/save-user') }}
-    {{ redirectInput('') }}
+					<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Sign Up</h1>
+					<form method="post" accept-charset="UTF-8">
+                        {{ csrfInput() }}
+                        {{ actionInput('users/save-user') }}
+                        {{ redirectInput('') }}
 
-    {% macro errorList(errors) %}
-        {% if errors %}
-            <ul class="errors">
-                {% for error in errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    {% endmacro %}
+                        {% macro errorList(errors) %}
+                            {% if errors %}
+                                <ul class="errors">
+                                    {% for error in errors %}
+                                        <li>{{ error }}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        {% endmacro %}
+                        
+                        <div class="form-group">
+                        {# <h3><label for="username">Username</label></h3> #}
+                        <input placeholder="Username" id="username" type="text" name="username"
+                            {%- if user is defined %} value="{{ user.username }}"{% endif -%}>
 
-    <h3><label for="username">Username</label></h3>
-    <input id="username" type="text" name="username"
-        {%- if user is defined %} value="{{ user.username }}"{% endif -%}>
+                        {% if user is defined %}
+                            {{ _self.errorList(user.getErrors('username')) }}
+                        {% endif %}
+                        </div>
 
-    {% if user is defined %}
-        {{ _self.errorList(user.getErrors('username')) }}
-    {% endif %}
+                        <div class="form-group">
+                        {# <h3><label for="email">Email</label></h3> #}
+                        <input placeholder="Email" id="email" type="text" name="email"
+                            {%- if user is defined %} value="{{ user.email }}"{% endif %}>
 
-    <h3><label for="email">Email</label></h3>
-    <input id="email" type="text" name="email"
-        {%- if user is defined %} value="{{ user.email }}"{% endif %}>
+                        {% if user is defined %}
+                            {{ _self.errorList(user.getErrors('email')) }}
+                        {% endif %}
+                        </div>
 
-    {% if user is defined %}
-        {{ _self.errorList(user.getErrors('email')) }}
-    {% endif %}
+                        <div class="form-group">
+                        {# <h3><label for="password">Password</label></h3> #}
+                        <input placeholder="Password" id="password" type="password" name="password">
 
-    <h3><label for="password">Password</label></h3>
-    <input id="password" type="password" name="password">
+                        {% if user is defined %}
+                            {{ _self.errorList(user.getErrors('password')) }}
+                        {% endif %}
+                        </div>
 
-    {% if user is defined %}
-        {{ _self.errorList(user.getErrors('password')) }}
-    {% endif %}
+                        <button type="submit">Register</button>
+                    </form>
+			</div>
+	</section>
 
-    <input type="submit" value="Register">
-</form>
 {% endblock %}
