--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,4 @@
 @import "stylesheets/reset.css";
 @import "stylesheets/fonts.css";
 @import "stylesheets/utils.css";
+@import "stylesheets/app.css";
