added thresholds per slot

--- a/src/stylesheets/scss/forms.scss
+++ b/src/stylesheets/scss/forms.scss
@@ -2,6 +2,11 @@
 
     $this: &;
 
+    .errors {
+        color: red;
+        list-style: none;
+    }
+
     .form-group {
         padding: 10px 20px;
 
