--- a/templates/schedules/index.twig
+++ b/templates/schedules/index.twig
@@ -19,7 +19,7 @@
 	<div class="container">
 		<div class="center">
 
-			<h1 class="f2 f1-l fw2 black mb0 lh-title">All Organizations</h1>
+			<h1 class="f2 f1-l fw2 black mb0 lh-title">All Schedules</h1>
 
 			<div id="cool"></div>
 
